<resources>
    <string name="app_name">Amonic Airlines</string>
    <string name="sign_in">Авторизация</string>
    <string name="sign_up">Регистрация</string>
    <string name="submit">Подтвердить</string>
    <string name="email">Почта</string>
    <string name="enter_your_password">Введите ваш пароль</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="enter_password">Введите пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="lastname">Фамилия</string>
    <string name="enter_your_lastname">Введите свою фамилию</string>
    <string name="birthday">Дата рождения</string>
    <string name="dd_mm_yyyy">ГГГГ-ММ-ДД</string>
    <string name="example_mail_com">example@mail.com</string>
    <string name="date">Дата</string>
    <string name="firstname">Имя</string>
    <string name="enter_your_firstname">Введите ваше имя</string>
    <string name="main">Главная</string>
    <string name="buy">Купить</string>
    <string name="profile">Профиль</string>
    <string name="textview">Текст</string>
    <string name="logo">Logo</string>
    <string name="buy_ticket">Купить билет</string>
    <string name="add_new_book">Добавить новую бронь</string>
    <string name="healthy">Полезное</string>
    <string name="table_flights">Табло рейсов</string>
    <string name="registration_flight">Зарегистрироваться на рейс</string>
    <string name="add_service">Дополнительные услуги</string>
    <string name="welcome_text">Рады вас видеть, имя!</string>
    <string name="where">Откуда</string>
    <string name="where_to">Куда</string>
    <string name="bussines">Бизнес класс</string>
    <string name="select_where_fly">Выберите направление</string>
    <string name="count_of_passengers">Количество пассажиров</string>
    <string name="gender">Пол:</string>
    <string name="phone_number">Номер телефона</string>
    <string name="change_password">Изменить пароль</string>
    <string name="exit">Выйти</string>
    <string name="yet_not_registered">Еще не зарегистрированы?</string>
    <string name="about_company">О компании</string>
    <string name="find_booking">Найти бронирование</string>
    <string name="number_of_flight">Номер брони/билета</string>
    <string name="finding_booking">Поиск брони</string>
    <string name="table_of_flights">Табло рейсов</string>
    <string name="finding">Найти</string>
    <string name="number_of">Номер рейса</string>
    <string name="flight_registration">Регистрация на рейс</string>
    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>