<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBFCFB"
    tools:context=".authority.SignInActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="207dp"
        android:layout_height="54dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/black_logo"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="370dp"
        android:layout_height="776dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_sign"
        android:elevation="20dp"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/textViewTitleSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/background_sign_in_up"
            android:elevation="10dp"
            android:paddingVertical="5dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewEmailSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/email"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextTextEmailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:elevation="5dp"
            android:ems="10"
            android:hint="@string/example_mail_com"
            android:textColorHint="#3E2723"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="15dp"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/textViewFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/firstname"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:elevation="5dp"
            android:ems="10"
            android:textColorHint="#3E2723"
            android:hint="@string/enter_your_firstname"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="15dp"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/textViewLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/lastname"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:elevation="5dp"
            android:textColorHint="#3E2723"
            android:ems="10"
            android:hint="@string/enter_your_lastname"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="15dp"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/textViewBirthDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/birthday"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextBirthDay"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_background"
                android:elevation="5dp"
                android:ems="10"
                android:textColorHint="#3E2723"
                android:hint="@string/dd_mm_yyyy"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="15dp"
                android:textAlignment="center"
                android:textSize="11sp" />

            <Button
                android:id="@+id/buttonSetDate"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="90dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/background_button"
                android:text="@string/date"
                android:textSize="11sp"
                android:textColor="#000" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewPasswordSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/password"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:elevation="5dp"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#3E2723"
            android:padding="15dp"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/textViewRePasswordSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/repeat_password"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextRePasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:elevation="5dp"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:textColorHint="#3E2723"
            android:minHeight="48dp"
            android:padding="15dp"
            android:textSize="11sp" />

        <Button
            android:id="@+id/buttonSignUp"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/background_button"
            android:minHeight="48dp"
            android:text="@string/submit"
            android:textColor="#000"
            android:textSize="11sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>