<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBFCFB"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/imageViewBlackLogo"
        android:layout_width="207dp"
        android:layout_height="54dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/black_logo"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="370dp"
        android:layout_height="726dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_sign"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBlackLogo">

        <TextView
            android:id="@+id/textViewTitleSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/background_sign_in_up"
            android:elevation="5dp"
            android:paddingVertical="5dp"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/email"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:elevation="5dp"
            android:ems="10"
            android:hint="@string/example_mail_com"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="15dp"
            android:textColorHint="#3E2723"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/password"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:elevation="5dp"
            android:ems="10"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="15dp"
            android:textColorHint="#3E2723"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="#FFFFFF"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/textViewYetNotRegisteredIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/yet_not_registered"
            android:textColor="#FFFFFF"
            android:textSize="11sp" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/background_button"
            android:text="@string/submit"
            android:textColor="#000"
            android:textSize="11sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>