<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FlightRegistrationActivity"
    android:padding="20dp"
    android:background="@drawable/background_two">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_sign"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/flight_registration" />

        <EditText
            android:id="@+id/editTextLastnameFinding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:hint="@string/lastname"
            android:textSize="11sp"
            android:textColorHint="#3E2723"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextNumberOfBooking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:padding="10dp"
            android:textSize="11sp"
            android:layout_marginTop="10dp"
            android:textColorHint="#3E2723"
            android:hint="@string/number_of_flight"
            android:inputType="number"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/buttonFindBooking"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/background_button"
            android:text="@string/find_booking"
            android:textColor="#000"
            android:layout_marginTop="15dp"
            android:textSize="11sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>