<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TableFlightsActivity"
    android:padding="20dp"
    android:background="@drawable/background_two">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_sign"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/table_of_flights" />

        <EditText
            android:id="@+id/editTextFlightNumberTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:hint="@string/number_of"
            android:textSize="11sp"
            android:textColorHint="#3E2723"
            android:inputType="number"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/editTextDateFlight"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_background"
                android:elevation="5dp"
                android:ems="10"
                android:textColorHint="#3E2723"
                android:hint="@string/dd_mm_yyyy"
                android:inputType="date"
                android:minHeight="48dp"
                android:padding="15dp"
                android:layout_weight="4"
                android:textAlignment="center"
                android:textSize="11sp"
                android:layout_width="0dp"/>

            <Button
                android:id="@+id/buttonSetDateTableFinding"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/background_button"
                android:text="@string/date"
                android:layout_weight="1"
                android:textSize="11sp"
                android:textColor="#000" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonFindingTableFlights"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/background_button"
            android:text="@string/finding"
            android:textColor="#000"
            android:layout_marginTop="15dp"
            android:textSize="11sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>