<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainPageFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_sign"
            android:elevation="5dp"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textViewWelcomeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:text="@string/welcome_text" />

            <Button
                android:id="@+id/buttonAddNewBookMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/background_button"
                android:drawableLeft="@drawable/ic_baseline_add_24"
                android:elevation="5dp"
                android:text="@string/add_new_book"
                android:textColor="#000" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/airplane_ticket" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/background_sign"
            android:elevation="5dp"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/healthy"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonTableFlightsMain"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border"
                android:drawableLeft="@drawable/globe"
                android:elevation="5dp"
                android:text="@string/table_flights"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="#333"
                android:textSize="15sp" />

            <Button
                android:id="@+id/buttonRegistrationFlightMain"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_border"
                android:drawableLeft="@drawable/airplane"
                android:elevation="5dp"
                android:text="@string/registration_flight"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="#333"
                android:textSize="15sp" />

            <Button
                android:id="@+id/buttonAddingServiceMain"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_border"
                android:drawableLeft="@drawable/add"
                android:elevation="5dp"
                android:text="@string/add_service"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="#333"
                android:textSize="15sp" />

            <Button
                android:id="@+id/buttonAboutMain"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_border"
                android:drawableLeft="@drawable/ic_baseline_info_24"
                android:elevation="5dp"
                android:text="@string/about_company"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="#333"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>